--- a/src/Cards/Cards.css
+++ b/src/Cards/Cards.css
@@ -1,75 +1,27 @@
-header {
-    background-color: #f2f2f2;
-    padding: 20px;
+.cards-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center; 
+  margin: 0 auto;
+  align-items: center;
+}
+
+
+.cards {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 20px;
+  list-style-type: none;
+}
+@media only screen and (min-width: 720px) {
+  .cards {
+
   }
-  
-  h1 {
-    margin: 0;
-    font-size: 36px;
-    font-weight: bold;
-  }
-  
-  .card-container {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
-    list-style-type: none;
-  }
-  
-  .card {
-    width: 300px;
-    height: 400px;
-    perspective: 1000px;
-    position: relative;
-  }
-  
-  .front, .back {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    backface-visibility: hidden;
-    transition: transform 0.5s ease-in-out;
-  }
-  
-  .front {
-    background-color: #ffffff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .back {
-    background-color: #ffffff;
-    transform: rotateY(180deg);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .card:hover .front {
-    transform: rotateY(-180deg);
-  }
-  
-  .card:hover .back {
-    transform: rotateY(0);
-  }
-  
-  h2 {
-    margin: 0;
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  
-  img {
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 10px;
-  }
+}
