--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -7,6 +7,9 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     background-color: var(--header-color);
 }
+.dark .navbar {
+  background-color: var(--dark-header-color);
+}
 .navbar-item {
     padding: 7px 20px;
     color: white;
@@ -42,7 +45,9 @@
     transition: .4s;
     border-radius: 34px;
   }
-
+.dark .slider {
+  background-color: var(--button-theme-off);
+}
   .slider:before {
     position: absolute;
     content: "";
